# blaze

./: .gitignore  CMakeLists.txt  README.md
cli/cmd/templates/: CMakeLists.txt.tmpl
docs/: configuration.md  database-orm.md  getting-started.md  routing.md
framework/include/blaze/: logger.h
framework/include/blaze/util/: schema.h  validation.h
framework/src/: app.cpp  logger.cpp  middleware.cpp
tests/: CMakeLists.txt  test_schema.cpp  test_validation.cpp
